; ModuleID = '/home/carl/AnghaBench/systemd/src/busctl/extr_busctl.c_verb_monitor.c'
source_filename = "/home/carl/AnghaBench/systemd/src/busctl/extr_busctl.c_verb_monitor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@arg_json = common dso_local global i64 0, align 8
@JSON_OFF = common dso_local global i64 0, align 8
@message_json = common dso_local global i32 0, align 4
@message_dump = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8**, i8*)* @verb_monitor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @verb_monitor(i32 %0, i8** %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i32, i32* %4, align 4
  %8 = load i8**, i8*** %5, align 8
  %9 = load i64, i64* @arg_json, align 8
  %10 = load i64, i64* @JSON_OFF, align 8
  %11 = icmp ne i64 %9, %10
  br i1 %11, label %12, label %14

12:                                               ; preds = %3
  %13 = load i32, i32* @message_json, align 4
  br label %16

14:                                               ; preds = %3
  %15 = load i32, i32* @message_dump, align 4
  br label %16

16:                                               ; preds = %14, %12
  %17 = phi i32 [ %13, %12 ], [ %15, %14 ]
  %18 = call i32 @monitor(i32 %7, i8** %8, i32 %17)
  ret i32 %18
}

declare dso_local i32 @monitor(i32, i8**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
